# sarkas

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  DSF_Calculations.ipynb  README.md  S_EGS.py  S_calc_force.py  S_calc_force_brute.py  S_calc_force_pm.py  S_calc_force_pp.py  S_checkpoint.py  S_constants.py  S_force.py  S_global_names.py  S_initialize_pos_vel.py  S_integrator.py  S_integrators.py  S_mpi_comm.py  S_p3m.py  S_params.py  S_particles.py  S_pm.py  S_pot_Coulomb.py  S_pot_EGS.py  S_pot_LJ.py  S_pot_Moliere.py  S_pot_QSP.py  S_pot_Yukawa.py  S_pp.py  S_pp_EGS.py  S_pp_yukawa.py  S_read_input.py  S_restart.py  S_thermostat.py  S_units.py  S_velocity_verlet.py  S_verbose.py  S_yukawa_gf_opt.py  (+28 more)
.ipynb_checkpoints/: DSF Calculation-checkpoint.ipynb  Testing-checkpoint.ipynb  nqt-checkpoint.py
Docker/: Dockerfile  requirements.txt
LJ_cgs/: S_parameters.pickle
Restart/: restart_0.npz  restart_1.npz  restart_100.npz  restart_110.npz  restart_14.npz  restart_150.npz  restart_16.npz  restart_170.npz  restart_18.npz  restart_190.npz  restart_2.npz  restart_20.npz  restart_21.npz  restart_23.npz  restart_230.npz  restart_24.npz  restart_25.npz  restart_26.npz  restart_260.npz  restart_28.npz  restart_29.npz  restart_3.npz  restart_30.npz  restart_300.npz  restart_320.npz  restart_350.npz  restart_390.npz  restart_40.npz  restart_60.npz  restart_7.npz  restart_80.npz  restart_9.npz  restart_90.npz
Restart1/: restart_10.npz  restart_11.npz  restart_12.npz  restart_120.npz  restart_13.npz  restart_130.npz  restart_140.npz  restart_15.npz  restart_160.npz  restart_17.npz  restart_180.npz  restart_19.npz  restart_200.npz  restart_210.npz  restart_22.npz  restart_220.npz  restart_240.npz  restart_250.npz  restart_27.npz  restart_270.npz  restart_280.npz  restart_290.npz  restart_310.npz  restart_330.npz  restart_340.npz  restart_360.npz  restart_370.npz  restart_380.npz  restart_4.npz  restart_5.npz  restart_50.npz  restart_6.npz  restart_70.npz  restart_8.npz
YOCP_cgs_pp/: S_parameters.pickle
YOCP_mks_pp/: S_parameters.pickle
_modules/: index.html
_sources/: index.rst  index.rst.txt
_static/: my-styles.css
api/: api.html  modules.html  sarkas.base.html  sarkas.core.html  sarkas.create_dataset.html  sarkas.html  sarkas.potentials.base.html  sarkas.potentials.core.html  sarkas.potentials.coulomb.html  sarkas.potentials.egs.html  sarkas.potentials.force_pm.html  sarkas.potentials.force_pp.html  sarkas.potentials.hs_yukawa.html  sarkas.potentials.html  sarkas.potentials.lennardjones.html  sarkas.potentials.moliere.html  sarkas.potentials.qsp.html  sarkas.potentials.yukawa.html  sarkas.processes.html  sarkas.time_evolution.html  sarkas.time_evolution.integrators.html  sarkas.time_evolution.thermostats.html  sarkas.tools.html  sarkas.tools.observables.html  sarkas.tools.transport.html  sarkas.utilities.exceptions.html  sarkas.utilities.html  sarkas.utilities.io.html  sarkas.utilities.maths.html  sarkas.utilities.timing.html
changelog/: 50.doc.rst  50.feature.rst  50.misc.rst  50.removal.rst  51.doc.rst  51.misc.rst  52.doc.rst  52.feature.rst  52.misc.rst
code development/: code_dev.html  dev_contributing.html  dev_docs.html  dev_report_issues.html  dev_setup.html
code_development/: code_dev.html  dev_contributing.html  dev_docs.html  dev_report_issues.html  dev_setup.html
contributing/: contributing.html  dev_docs.html  dev_example.html  dev_report_issues.html  dev_setup.html
credits/: credits.html  pub_research.html  team.html
development/: code_dev.html  dev_contributing.html  dev_docs.html  dev_setup.html  (+1 more)
(+2732 files in other folders)
