# Development tools

[tool.black]
line-length = 122
exclude = '''
/(
  | \.git
  | \.github
  | _build
  | build
  | dist
)/
'''

[tool.flakehell]
exclude = []
# make output nice
format = "grouped"
max-line-length = 122
# show line of source code in output
# show_source = true
extended_default_ignore=[]  # workaround for flakehell#10

[tool.flakehell.plugins]
pycodestyle = ["+*",
#                "-E203",
#                "-E501",
#                "-W503",
#                "-E741",
#                "-E266",  # too many leading #
#                "-E731", # do not assign lambda expression, use def
               ]
pyflakes = ["+*", "-E203"]
# flake8-bandit = ["+*"]
# mccabe = ["+*"]
pylint = ["+*", "-C0103"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "matplotlib"
]
build-backend = "setuptools.build_meta"