[metadata]
description-file = README.md
package_name = sarkas
description = Sarkas - A Fast pure-python Molecular Dynamics code and toolkit for non-ideal plasmas
author = Murillo Group
author_email = sarkasdev@gmail.com
license = MIT
url = https://murillogroup.github.io/sarkas
edit_on_github = True
github_project = murillo-group/sarkas
version = 0.1.0
minimum_python_version = 3.7
install_requires = numpy, numba>=0.50.1, fdint, tqdm, pyfiglet, pyyaml
