[metadata]
description-file = README.md
package_name = sarkas
description = Sarkas - A Fast pure-python Molecular Dynamics suite for plasmas
author = Murillo Group
author_email = sarkasdev@gmail.com
license = MIT
url = https://murillogroup.github.io/sarkas
edit_on_github = True
github_project = murillo-group/sarkas
version = 1.0.1
minimum_python_version = 3.7
package_dir = sarkas