[metadata]
description-file = README.md
package_name = sarkas
description = Sarkas - A fast pure-python Molecular Dynamics suite for plasmas
author = Murillo Group
author_email = sarkasdev@gmail.com
license = MIT
url = https://murillogroup.github.io/sarkas
edit_on_github = True
github_project = murillo-group/sarkas
version = 1.1.0
minimum_python_version = 3.7
package_dir = sarkas


[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=4.0
    tox>=4.0

[tox:tox]
min_version = 4.6.0
env_list = 
    py37
    py38
isolated_build = true

[testenv]
setenv =
  PYTHONPATH= {toxinidir}
deps = -r{toxinidir}/requirements_dev.txt
commands = pytest --basetemp={envtmpdir}